# agentic-ai-coders

./: .env.example  README.md  app.py  pyproject.toml  requirements.txt  run_haco.bat
agent/: graph.py  prompts.py  states.py  tools.py
haco/: __init__.py  agents.py  graph.py  llvm_analyzer.py  qemu_runner.py  rag.py  simulator.py  state.py
samples/: fibonacci.cpp  power_fn.cpp  string_search.cpp
static/: index.html
