[project]
name = "ai-coding-agent"
version = "0.1.0"
description = "AI Coding Agent by Atharva Gai"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Atharva Gai" }
]
dependencies = [
    "groq>=0.31.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-groq>=0.3.7",
    "langgraph>=0.4.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "websockets>=11.0",
]
